deployments/server.yml
apiVersion: v1
kind: Service
metadata:
  name: manga-manager
  labels:
    app: manga-manager
spec:
  type: NodePort
  selector:
    app: manga-manager
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manga-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manga-manager 
  template:
    metadata:
      labels:
        app: manga-manager
    spec:
      containers:
        - name: manga-manager
          image: gcr.io/nttcom-td-us-51479829/komasshu/manga-manager:20200422-00
          ports:
            - containerPort: 3001 
          command: ['node', '/app/index.js']
